...
    <string name="tap_again_to_exit">Tap again to exit!</string>

    <string name="welcome">Welcome !</string>
    <string name="login_title">Lorem ipsum dolor sit amet</string>
    <string name="login_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque dignissim sodales.</string>
    <string name="remember">Remember</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">nals@×××.jp</string>
    <string name="password_hint">8 to 12 alphanumeric characters</string>

    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
...
